force-app/main/default/objects/Job_Apllication__c/Job_Apllication__c.object-meta.xml
<CustomObject>
    <label>Job Apllication</label>
    <nameField>
        <displayFormat>JA-{000}</displayFormat>
        <label>App-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Apllications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>