force-app/main/default/objects/Job_Apllication__c/fields/Candidate_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email_ID__c</fullName>
    <formula>Candidate_Name__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Email ID</label>
    <type>Text</type>
</CustomField>