force-app/main/default/objects/Job_Apllication__c/fields/Candidate_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Full_Name__c</fullName>
    <formula>Candidate_Name__r.Name &amp; &quot; &quot;  &amp;  Candidate_Name__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Full Name</label>
    <type>Text</type>
</CustomField>