force-app/main/default/objects/Job_Apllication__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <label>Candidate Name</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Job Apllications</relationshipLabel>
    <relationshipName>Job_Apllications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>