force-app/main/default/objects/Job_Apllication__c/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <label>Job ID</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Job Apllications</relationshipLabel>
    <relationshipName>Job_Apllications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>